--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,24 @@
             "dicr\\telegram\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "dicr\\tests\\": "tests/"
+        }
+    },
     "minimum-stability": "RC",
     "prefer-stable": true,
     "require": {
         "php": "~7.2",
         "ext-json": "*",
         "yiisoft/yii2": "~2.0",
+        "dicr/yii2-helper": "~3.5",
         "dicr/yii2-http": "~2.1",
         "dicr/yii2-validate": "~2.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit": "~9.3"
     },
     "repositories": [
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-http.git"},
