--- a/composer.json
+++ b/composer.json
@@ -29,16 +29,18 @@
     "minimum-stability": "RC",
     "prefer-stable": true,
     "require": {
-        "php": "~7.2",
+        "php": "~7.3",
         "ext-json": "*",
         "yiisoft/yii2": "~2.0",
-        "dicr/yii2-helper": "~3.5",
+
+        "dicr/yii2-json": "~2.0",
+        "dicr/yii2-helper": "~4.0",
         "dicr/yii2-http": "~2.1",
-        "dicr/yii2-validate": "~2.0"
+        "dicr/yii2-validate": "~2.2"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "~9.3"
+        "phpunit/phpunit": "~9.4"
     },
     "repositories": [
         {"type": "git", "url": "https://gitlab.com/dicr/yii2-http.git"},
