--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Igor A Tarasov",
             "email": "develop@dicr.org",
-            "homepage": "http://dicr.org",
+            "homepage": "https://dicr.org",
             "role": "developer"
         }
     ],
@@ -34,12 +34,12 @@
         "yiisoft/yii2": "~2.0",
 
         "dicr/yii2-json": "~2.0",
-        "dicr/yii2-helper": "~4.0",
-        "dicr/yii2-http": "~2.1",
+        "dicr/yii2-helper": "~5.0",
+        "dicr/yii2-http": "~3.0",
         "dicr/yii2-validate": "~2.3"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "~9.5"
     },
     "repositories": [
